# IOT

./: README.md  beginesp.sh  beginpython.sh  init.sh
Lab1/: README.md
Lab1/lab1_2/: CMakeLists.txt
Lab1/lab1_2/main/: CMakeLists.txt  Hello_world.c
Lab1/lab1_3/: sdkconfig  sdkconfig.old
Lab2/lab2_2/main/: lab2_2.c
Lab3/: DFRobot_LCD.cpp  DFRobot_LCD.h
Lab3/lab3_2/main/: CMakeLists.txt  DFRobot_LCD.cpp  DFRobot_LCD.h  lab3_2.c  lab3_2.cpp
Lab3/lab3_3/main/: DFRobot_LCD.cpp  lab3_3.cpp
Lab4/lab4_1/: CMakeLists.txt
Lab4/lab4_1/main/: CMakeLists.txt  icm42670.c  lab4_1.c
Lab4/lab4_2/main/: ble_hidd_demo_main.c  lab4_2.c
Lab4/lab4_3/main/: CMakeLists.txt  ble_hidd_demo_main.c
Lab5/lab5_1/: FlashLED.py
Lab5/lab5_1/main/: lab5_1.c
Lab5/lab5_2/main/: lab5_2.c
Lab5/testing/CLI_test/: CMakeLists.txt  send
Lab5/testing/PythonScript/: FlashLED.py  send
Lab6/lab6_1/main/: lab6_1.c
Lab7/: getTemp.py
Lab7/WorkingExamples/https_request/: sdkconfig
Lab7/http_request/main/: http_request_example_main.c
Lab7/lab7_1/: CMakeLists.txt  sdkconfig.old
Lab7/lab7_1/main/: https_request_example_main.c
Lab7/lab7_2/: CMakeLists.txt
Lab7/lab7_2/main/: https_request_example_main.c
Lab7/lab7_3/: CMakeLists.txt
Lab7/lab7_3/main/: http_request_example_main.c
Lab8/lab8_2/: Cargo.toml
Lab8/lab8_2/src/: main.rs
Lab8/lab8_3/: Cargo.toml
Lab8/lab8_3/src/: main.rs
testing/IMU/: CMakeLists.txt
testing/lab4_1_test/: CMakeLists.txt
testing/lab4_3_test/: CMakeLists.txt
testing/lab4_3_test/main/: CMakeLists.txt  ble_hidd_demo_main_test.c
(+10 files in other folders)
